--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <p>Hello World, Saya sedang belajar Git</p>
+         <p>Hello Dunia!, Saya sudah belajar Git</p>
++        <p>Belajar Git Greget!</p>
     </body>
 </html>
 
