--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
         <title>Belajar Git - Project 01</title>
     </head>
     <body>
-        <p>Hello World, Saya sedang belajar Git</p>
-         <p>Hello Dunia!, Saya sudah belajar Git</p>
-+        <p>Belajar Git Greget!</p>
+       <p>ini test aja</p>
     </body>
 </html>
 
